--- a/src/css/style.css
+++ b/src/css/style.css
@@ -101,7 +101,7 @@ li {
   color: var(--text-color-black);
   text-transform: uppercase;
   letter-spacing: 4px;
-  font-weight: 700;
+  font-weight: 500;
   transition: color 0.3s;
 }
 
@@ -110,86 +110,84 @@ li {
 }
 
 #hamburger-nav {
-    display: none;
-    position: fixed;
-    top: 0;
-    right: 0;
-    z-index: 1000;
+  display: none;
+  position: fixed;
+  top: 0;
+  right: 0;
+  z-index: 1000;
 }
 
 .hamburger-menu {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .hamburger-icon {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 24px;
-    width: 30px;
-    cursor: pointer;
-    margin: 36px;
-    border: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 24px;
+  width: 30px;
+  cursor: pointer;
+  margin: 28.1px;
+  border: none;
 }
 
 .hamburger-icon span {
-    width: 100%;
-    height: 2px;
-    background-color: black;
-    transition: all 0.3s ease-in-out;
+  width: 100%;
+  height: 2px;
+  background-color: black;
+  transition: all 0.3s ease-in-out;
 }
 
 .menu-links {
-    position: absolute;
-    top: 100%;
-    right: 0;
-    background-color: var(--text-color-white);
-    width: fit-content;
-    max-height: 0;
-    overflow: hidden;
-    transition: all 0.3s ease-in-out;
+  position: absolute;
+  top: 100%;
+  right: 0;
+  background-color: var(--text-color-white);
+  width: auto;
+  max-height: 0;
+  overflow: hidden;
+  transition: all 0.3s ease-in-out;
 }
 
 .menu-links a {
-    display: block;
-    padding: 16px;
-    text-align: center;
-    font-size: 1.2rem;
-    color: black;
-    text-decoration: none;
-    transition: all 0.3s ease-in-out;
+  display: block;
+  padding: 0.7em;
+  text-align: center;
+  font-size: 1rem;
+  color: var(--text-color-black);
+  text-decoration: none;
+  transition: all 0.3s ease-in-out;
 }
 
 .menu-links.open {
-    max-height: 300px;
+  max-height: 300px;
 }
 
 .hamburger-icon.open span:first-child {
-    transform: rotate(45deg) translate(10px, 5px);
+  transform: rotate(45deg) translate(10px, 5px);
 }
 
 .hamburger-icon.open span:nth-child(2) {
-    opacity: 0;
+  opacity: 0;
 }
 
 .hamburger-icon.open span:last-child {
-    transform: rotate(-45deg) translate(10px, -5px);
+  transform: rotate(-45deg) translate(10px, -5px);
 }
 
 .hamburger-icon span:first-child {
-    transform: none;
+  transform: none;
 }
 
 .hamburger-icon span:first-child {
-    opacity: 1;
+  opacity: 1;
 }
 
 .hamburger-icon span:first-child {
-    transform: none;
+  transform: none;
 }
-
-
 
 #home {
   color: var(--text-color-black);
@@ -362,19 +360,6 @@ li {
   color: var(--bg-color);
 }
 
-.skills-box {
-  width: 165%;
-  background-color: var(--text-color-white);
-  padding: 22px;
-  box-shadow: 0 0 11px rgba(0, 0, 0, 0.1);
-  text-align: start;
-}
-
-.skills-container {
-  text-align: start;
-  margin-bottom: 20px;
-}
-
 .about-content-skills {
   position: relative;
   text-align: start;
@@ -517,7 +502,7 @@ li {
   text-decoration: none;
 }
 
-.title {
+.contact-title {
   text-align: center;
   margin-bottom: 1rem;
   color: var(--text-color-black);
@@ -575,16 +560,9 @@ li {
   display: inline-block;
 }
 
-.easter-egg i {
-  transition: transform 0.3s ease-in-out;
-}
-
-.easter-egg:hover {
-  cursor: pointer;
-}
-
 .easter-egg:hover i {
   color: rgb(241, 33, 182);
   transform: scale(1.5);
   transition: transform 0.3s ease-in-out, color 0.3s ease-in-out;
+  cursor: pointer;
 }
